@@ -1,3 +1,8 @@
+2004-04-20  David Schleef  <ds@schleef.org>
+
+	* gst/parse/grammar.y:  Apply patch from Sebastien Cote
+	<sc5@hermes.usherb.ca> to fix a memleak. (bug #140594)
+
 2004-04-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/gstelement.c: (gst_element_wait),
